@@ -68,19 +68,19 @@
                         <item> xor </item>
                 </list>
                 <contexts>
-                        <context attribute="0" lineEndContext="0">
-                                <keyword attribute="1" context="0" String="keywords"/>
+                        <context attribute="0" lineEndContext="#stay">
+                                <keyword attribute="1" context="#stay" String="keywords"/>
                                 <!-- HlAdaBaseN attribute="3" context="0"/ -->
-                                <Float attribute="4" context="0"/>
-                                <Int attribute="2" context="0"/>
-                                <RegExpr attribute="5" context="0" String="'.'"/> <!-- Ada Char -->
+                                <Float attribute="4" context="#stay"/>
+                                <Int attribute="2" context="#stay"/>
+                                <RegExpr attribute="5" context="#stay" String="'.'"/> <!-- Ada Char -->
                                 <DetectChar attribute="6" context="1" char="&quot;"/>
                                 <Detect2Chars attribute="7" context="2" char="-" char1="-"/>
                         </context>
-                        <context attribute="6" lineEndContext="0">
-                                <DetectChar attribute="6" context="0" char="&quot;"/>
+                        <context attribute="6" lineEndContext="#pop">
+                                <DetectChar attribute="6" context="#pop" char="&quot;"/>
                         </context>
-                        <context attribute="7" lineEndContext="0"/>
+                        <context attribute="7" lineEndContext="#pop"/>
                 </contexts>
                 <itemDatas>
                         <itemData name="Normal Text" defStyleNum="dsNormal" />
