@@ -39,59 +39,59 @@
       <item> volatile </item>
     </list>
     <contexts>
-      <context attribute="0" lineEndContext="0">
-        <keyword attribute="1" context="0" String="keywords"/>
-        <keyword attribute="2" context="0" String="types"/>
-        <Float attribute="6" context="0">
-          <AnyChar String="fF" attribute="6" context="0"/>
+      <context attribute="0" lineEndContext="#stay">
+        <keyword attribute="1" context="#stay" String="keywords"/>
+        <keyword attribute="2" context="#stay" String="types"/>
+        <Float attribute="6" context="#stay">
+          <AnyChar String="fF" attribute="6" context="#stay"/>
         </Float>
-        <HlCOct attribute="4" context="0"/>
-        <HlCHex attribute="5" context="0"/>
-        <Int attribute="3" context="0" >
-          <StringDetect attribute="3" context="0" String="ULL" insensitive="TRUE"/>
-          <StringDetect attribute="3" context="0" String="LUL" insensitive="TRUE"/>
-          <StringDetect attribute="3" context="0" String="LLU" insensitive="TRUE"/>
-          <StringDetect attribute="3" context="0" String="UL" insensitive="TRUE"/>
-          <StringDetect attribute="3" context="0" String="LU" insensitive="TRUE"/>
-          <StringDetect attribute="3" context="0" String="LL" insensitive="TRUE"/>
-          <StringDetect attribute="3" context="0" String="U" insensitive="TRUE"/>
-          <StringDetect attribute="3" context="0" String="L" insensitive="TRUE"/>
+        <HlCOct attribute="4" context="#stay"/>
+        <HlCHex attribute="5" context="#stay"/>
+        <Int attribute="3" context="#stay" >
+          <StringDetect attribute="3" context="#stay" String="ULL" insensitive="TRUE"/>
+          <StringDetect attribute="3" context="#stay" String="LUL" insensitive="TRUE"/>
+          <StringDetect attribute="3" context="#stay" String="LLU" insensitive="TRUE"/>
+          <StringDetect attribute="3" context="#stay" String="UL" insensitive="TRUE"/>
+          <StringDetect attribute="3" context="#stay" String="LU" insensitive="TRUE"/>
+          <StringDetect attribute="3" context="#stay" String="LL" insensitive="TRUE"/>
+          <StringDetect attribute="3" context="#stay" String="U" insensitive="TRUE"/>
+          <StringDetect attribute="3" context="#stay" String="L" insensitive="TRUE"/>
         </Int>
-        <HlCChar attribute="7" context="0"/>
+        <HlCChar attribute="7" context="#stay"/>
         <DetectChar attribute="8" context="1" char="&quot;"/>
         <Detect2Chars attribute="10" context="2" char="/" char1="/"/>
         <Detect2Chars attribute="10" context="3" char="/" char1="*"/>
-        <AnyChar attribute="11" context="0" String="!%&amp;()+,-&lt;=&gt;?[]^{|}~"/>
+        <AnyChar attribute="11" context="#stay" String="!%&amp;()+,-&lt;=&gt;?[]^{|}~"/>
         <StringDetect attribute="10" context="8" String="#if 0" insensitive="FALSE"/>
         <RegExpr attribute="12" context="4" String="^#"/>
       </context>
-      <context attribute="8" lineEndContext="0">
+      <context attribute="8" lineEndContext="#pop">
         <LineContinue attribute="8" context="6"/>
-        <HlCStringChar attribute="9" context="1"/>
-        <DetectChar attribute="8" context="0" char="&quot;"/>
+        <HlCStringChar attribute="9" context="#stay"/>
+        <DetectChar attribute="8" context="#pop" char="&quot;"/>
       </context>
-      <context attribute="10" lineEndContext="0">
-        <RegExpr attribute="3" context="2" String="(FIXME|TODO)" />
+      <context attribute="10" lineEndContext="#pop">
+        <RegExpr attribute="3" context="#stay" String="(FIXME|TODO)" />
       </context>
-      <context attribute="10" lineEndContext="3">
-        <Detect2Chars attribute="10" context="0" char="*" char1="/"/>
-        <RegExpr attribute="3" context="3" String="(FIXME|TODO)" />
+      <context attribute="10" lineEndContext="#stay">
+        <Detect2Chars attribute="10" context="#pop" char="*" char1="/"/>
+        <RegExpr attribute="3" context="#stay" String="(FIXME|TODO)" />
       </context>
-      <context attribute="12" lineEndContext="0">
+      <context attribute="12" lineEndContext="#pop">
         <LineContinue attribute="12" context="7"/>
-        <RangeDetect attribute="13" context="4" char="&quot;" char1="&quot;"/>
-        <RangeDetect attribute="13" context="4" char="&lt;" char1="&gt;"/>
+        <RangeDetect attribute="13" context="#stay" char="&quot;" char1="&quot;"/>
+        <RangeDetect attribute="13" context="#stay" char="&lt;" char1="&gt;"/>
         <Detect2Chars attribute="10" context="2" char="/" char1="/"/>
         <Detect2Chars attribute="10" context="5" char="/" char1="*"/>
       </context>
-      <context attribute="10" lineEndContext="5">
-        <Detect2Chars attribute="10" context="4" char="*" char1="/" />
+      <context attribute="10" lineEndContext="#stay">
+        <Detect2Chars attribute="10" context="#pop" char="*" char1="/" />
       </context>
-      <context attribute="0" lineEndContext="1" />
-      <context attribute="0" lineEndContext="4" />
-      <context attribute="10" lineEndContext="8">
-          <RegExpr attribute="3" context="8" String="(FIXME|TODO)" /> 
-          <RegExpr attribute="10" context="0" String="^#endif" />
+      <context attribute="0" lineEndContext="#pop" />
+      <context attribute="0" lineEndContext="#pop" />
+      <context attribute="10" lineEndContext="#stay">
+          <RegExpr attribute="3" context="#stay" String="(FIXME|TODO)" />
+          <RegExpr attribute="10" context="#pop" String="^#endif" />
       </context>
     </contexts>
     <itemDatas>
