@@ -106,7 +106,7 @@
       <item> uint64_t </item>
     </list>
     <contexts>
-      <context attribute="0" lineEndContext="#stay" name="Normal">
+      <context attribute="0" lineEndContext="-1" name="Normal">
         <keyword attribute="1" context="-2" String="keywords" />
         <keyword attribute="2" context="-2" String="types" />
         <Float attribute="6" context="-2">
@@ -146,8 +146,8 @@
       </context>
       <context attribute="12" lineEndContext="0" name="Preprocessor">
         <LineContinue attribute="12" context="7"/>
-        <RangeDetect attribute="13" context="4" char="&quot;" char1="&quot;"/>
-        <RangeDetect attribute="13" context="4" char="&lt;" char1="&gt;"/>
+        <RangeDetect attribute="13" context="-2" char="&quot;" char1="&quot;"/>
+        <RangeDetect attribute="13" context="-2" char="&lt;" char1="&gt;"/>
         <Detect2Chars attribute="10" context="2" char="/" char1="/"/>
         <Detect2Chars attribute="10" context="5" char="/" char1="*"/>
       </context>
@@ -158,7 +158,7 @@
       <context attribute="0" lineEndContext="4" name="Some Context2"/>
       <context attribute="10" lineEndContext="-2">
           <RegExpr attribute="3" context="-2" String="(FIXME|TODO)" />
-	  <RegExpr attribute="10" context="8" String="#if" />
+	  <RegExpr attribute="10" context="-2" String="#if" />
           <RegExpr attribute="10" context="-1" String="^#endif" />
       </context>
     </contexts>
