@@ -303,9 +303,9 @@
       <item> break </item>
     </list>
     <contexts>
-      <context attribute="0" lineEndContext="0">
-        <keyword attribute="1" context="0" String="keywords" weakDelimiter="-"/>
-        <keyword attribute="2" context="0" String="types" weakDelimiter="-"/>
+      <context attribute="0" lineEndContext="#stay">
+        <keyword attribute="1" context="#stay" String="keywords" weakDelimiter="-"/>
+        <keyword attribute="2" context="#stay" String="types" weakDelimiter="-"/>
       </context>
     </contexts>
     <itemDatas>
