@@ -42,19 +42,19 @@
                         <item> invariant </item>
                 </list>
                 <contexts>
-                        <context attribute="0" lineEndContext="0">
-                                <keyword attribute="1" context="0" String="keywords"/>
-                                <Float attribute="3" context="0"/>
-                                <Int attribute="2" context="0"/>
-                                <RegExpr attribute="4" context="0" String="'.'"/>
+                        <context attribute="0" lineEndContext="#stay">
+                                <keyword attribute="1" context="#stay" String="keywords"/>
+                                <Float attribute="3" context="#stay"/>
+                                <Int attribute="2" context="#stay"/>
+                                <RegExpr attribute="4" context="#stay" String="'.'"/>
                                 <DetectChar attribute="5" context="1" char="&quot;"/>
                                 <Detect2Chars attribute="6" context="2" char="-" char1="-"/>
-                                <keyword attribute="7" context="0" String="assertions"/>
+                                <keyword attribute="7" context="#stay" String="assertions"/>
                         </context>
-                        <context attribute="5" lineEndContext="0">
-                                <DetectChar attribute="5" context="0" char="&quot;"/>
+                        <context attribute="5" lineEndContext="#pop">
+                                <DetectChar attribute="5" context="#pop" char="&quot;"/>
                         </context>
-                        <context attribute="6" lineEndContext="0"/>
+                        <context attribute="6" lineEndContext="#pop"/>
                 </contexts>
                 <itemDatas>
                         <itemData name="Normal Text" defStyleNum="dsNormal" />
