@@ -1,3 +1,7 @@
+2001-10-29 Joseph Wenninger <jowenn@kde.org>
+  * Highlighting definitions support now #stay and #pop as context values
+  * Some highlighting definitions ported
+
 2001-10-27 Christoph Cullmann <cullmann@kde.org>
   * undo/redo works now without errors
   * fix many memleaks + some crashs in buffer + hl
